tests/suite/errors/e36_while_let_bool_pattern_on_nonbool.rs
// err: bool pattern on `i64`

fn main() {
    let mut x: i64 = 0;
    while let true = x {
        x = x + 1;
    }
}
